[metadata]
name = statmorph_cython
version = 1.0
description = Simplified Non-parametric Galaxy Morphology Package
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
author = Yao Yao
author_email = yaoyao97@mail.ustc.edu.cn
url = https://gitee.com/yaoyao/statmorph_simplified
download_urls = https://gitee.com/yaoyao/statmorph_simplified
project_urls =
	Documentation = https://gitee.com/yaoyao/statmorph_simplified
	Code = https://gitee.com/yaoyao/statmorph_simplified
	Issue tracker = https://gitee.com/yaoyao/statmorph_simplified/issues
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: GPL License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: Chinese
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.9
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.pyx, *.h
